# openbmc-gxp-dbus-sensors

./: CMakeLists.txt  README.md
include/: GxpPwmSensor.hpp  GxpTachSensor.hpp  GxpTempSensor.hpp  Utils.hpp
service_files/: xyz.openbmc_project.GxpFanSensor.service  xyz.openbmc_project.GxpTempSensor.service
src/: GxpFanMain.cpp  GxpPwmSensor.cpp  GxpTachSensor.cpp  GxpTempSensor.cpp
